reformatted ny overlays and cleaned html code.

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,9 +76,6 @@ L.marker([37.47,126.95]).addTo(map)
 L.marker([43.44,-76.53]).addTo(map)
   .bindPopup('<a href="oswego">Oswego, NY</>')
 
-L.marker([45.09,25.47]).addTo(map)
-  .bindPopup('<a href="dambovita">Dambovita, Romania</>')
-
 L.marker([44.28,28.62]).addTo(map)
   .bindPopup('<a href="constanta">Constanta, Romania</>')
 
@@ -90,9 +87,6 @@ L.marker([47.6,-122.33]).addTo(map)
 
 L.marker([42.5,-90.69]).addTo(map)
   .bindPopup('<a href="dubuque">Dubuque, IA</>')
-
-L.marker([30.29, -97.73]).addTo(map)
-  .bindPopup('<a href="travis">Austin, TX</>')
 
 L.marker([41.67,-91.54]).addTo(map)
   .bindPopup('<a href="johnson">Olathe, KS</>')
@@ -128,7 +122,7 @@ L.marker([58.26,8.34]).addTo(map)
   .bindPopup('<a href="lillesand">Lillesand, Norway</>')
 
 L.marker([37.81,-122.23]).addTo(map)
-  .bindPopup('<a href="alemeda">Oakland, CA</>')
+  .bindPopup('<a href="alameda">Oakland, CA</>')
 
 L.marker([35.91,-79.06]).addTo(map)
   .bindPopup('<a href="orange">Durham, NC</>')
@@ -139,11 +133,8 @@ L.marker([25.75,-80.25]).addTo(map)
 L.marker([-38.1,147.08]).addTo(map)
   .bindPopup('<a href="shire">Shire of Wellington, Australia</>')
 
-L.marker([53.57,147.08]).addTo(map)
+L.marker([53.57,-113.54]).addTo(map)
   .bindPopup('<a href="edmonton">Edmonton, Canada</>')
-
-L.marker([24.32,-3.25]).addTo(map)
-  .bindPopup('<a href="adrar">Adrar, Algeria</>')
 
 L.marker([44.46,-93.16]).addTo(map)
   .bindPopup('<a href="rice">Rice, MN</>')
